examples/bad/tuple-value-not-in-bracket.elina
fn main(): void {
  var t: tuple<int> = 10;
}